crates/test-files/fixtures/compile_errors/string_constructor_bad_type_arg.fe
# https://github.com/ethereum/fe/issues/532

contract ERC20:
    pub fn return_casted_static_string() -> String<100>:
        return String<H00>("foo")
